# idle_mech_rpg_game

./: .gitignore  CMakeLists.txt  README.md
data/: bosses.json  items.json  levels.json
progression/: PROJECT_REPORT_00.md
src/: Equipment.cpp  Equipment.h  Game.cpp  Game.h  GameClasses.h  Item.cpp  Item.h  Mech.cpp  Mech.h  Stats.h  Utils.h  crow_all.h  game.h  main.cpp  pilot.cpp
web/: class_selection.html  index.html  main_menu.html  main_menu_script.js  main_menu_style.css  script.js  style.css
